--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
     <link rel="stylesheet" href="style/base.css">
 </head>
 <body>
-    <!-- <nav id="app-navigation"></nav> -->
-    <div id="app-menu"></div>
-    <div id="app-container">
-        <div id="app-container-dialogs"></div>
-        <div id="app-container-messages"></div>
-    </div>
+    <div id="app"></div>
 
     <!-- <script src="js/index.js"></script> -->
 
